# speedruncompy

./: .gitignore  README.md  getSessId.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  testAsync.py  testAuthFlow.py  testBadRequest.py  testData.py  testPaginated.py  testRateLimit.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: GetGameData.md  GetGameLeaderboard2.md  GetGameRecordHistory.md
docs/post/: GetGameSettings.md  GetSession.md  PutAuthLogin.md
examples/: test.ipynb  test.py  testAsync.py  testAuthFlow.py  testBadRequest.py  testData.py  testPaginated.py  testRateLimit.py
speedruncompy/: __init__.py  api.py  auth.py  data_structures.py  datatypes.py  endpoints.py  enums.py  exceptions.py  responses.py  test_datatypes.py  test_endpoints.py
src/: GetGameLeaderboard2.py  __init__.py  api.py  auth.py  data_structures.py  datatypes.py  endpoints.py  exceptions.py  responses.py  test.py
src/speedruncompy/: __init__.py  api.py  auth.py  config.py  datatypes.py  endpoints.py  enums.py  exceptions.py  responses.py
src/speedruncompy/datatypes/: __init__.py  _impl.py  config.py  defs.py  enums.py  responses.py
src/speedruncompy/scripts/: srcompy_login.py
test/: test_datatypes.py  test_endpoints.py  utils.py
