[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speedruncompy"
version = "0.0.1"
authors = [
  { name="Jamie Bloomfield", email="jamiebloomfield8@gmail.com" },
]
description = "A wrapper for speedrun.com's new pre-production v2 API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ManicJamie/speedruncomv2"
"Bug Tracker" = "https://github.com/ManicJamie/speedruncomv2/issues"