[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "speedruncompy"
authors = [
    {name = "Jamie", email = "jamie.on.twitch@gmail.com"},
]
description = "A wrapper for speedrun.com's obscure new v2 API, as used by their new site"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["speedrun"]
license = {text = "LGPLv2.1"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)"
]
dependencies = [
    "aiohttp"
]
dynamic = ["version"]

[project.scripts]
srcompy-login = "speedruncompy.scripts.srcompy_login:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
    "src/speedruncompy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/ManicJamie/speedruncompy"
Repository = "https://github.com/ManicJamie/speedruncompy.git"
"Bug Tracker" = "https://github.com/ManicJamie/speedruncompy/issues"

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"